full-moon/tests/roblox_cases/fail/parser/declared_globals/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/roblox_cases/fail/parser/declared_globals
---
error[ast]: unexpected expression when looking for a statement
  ┌─ source.lua:1:9
  │
1 │ declare foo: Bar
  │         ^^^

error[ast]: expected arguments after `:`
  ┌─ source.lua:1:14
  │
1 │ declare foo: Bar
  │              ^^^
